--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,18 @@
     <string name="home">Home</string>
     <string name="contact_us">Contact Us</string>
     <string name="about_us">About Us</string>
+    <string name="mojivet">Mojivet</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="email">EMAIL</string>
+    <string name="example_gmail_com">example@gmail.com</string>
+    <string name="send_code">Send Code</string>
+    <string name="create_new_account">Create New Account</string>
+    <string name="already_registered">Already Registered?</string>
+    <string name="log_in_here">Log in here.</string>
+    <string name="name">NAME</string>
+    <string name="juan_dela_cruz">Juan Dela Cruz</string>
+    <string name="password">PASSWORD</string>
+    <string name="confirm_password">CONFIRM PASSWORD</string>
+    <string name="char_pass">********</string>
+    <string name="sign_up">Sign up</string>
 </resources>
