--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="submit">Submit</string>
     <string name="concern">Concern</string>
     <string name="choose_veterinarian">Choose Veterinarian</string>
+    <string name="cats_and_dogs">Cats and dogs</string>
 </resources>
