--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="first_name">First Name</string>
     <string name="dhaveacc">"Don't Have an Account?"</string>
     <string name="sghere">Sign Up Here</string>
+    <string name="cntus">Contact Us</string>
 
 </resources>
