Major changes minor optimization
Still need updates @ fragment_profile.xml, fragment_appointment.xml, fragment_home.xml and RETROFIT

Signed-off-by: Jamessysystem <smenardjames@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,8 +53,14 @@
     <string name="adde">mojivet@gmail.com</string>
     <string name="loc">Location:</string>
     <string name="locadd">123 AB Fernandez,Dagupan City</string>
-
-
+    <string name="profile">Profile</string>
+    <string name="photos">Photos</string>
+    <string name="logout">Logout</string>
+    <string name="logo">logo</string>
+    <string name="contactmascot">contactmascot</string>
+    <string name="facebook">facebook</string>
+    <string name="instagram">instagram</string>
+    <string name="save">Save</string>
 
 
 </resources>
